<resources>
    <string name="app_name">Bus App</string>

    <string name="FACEBOOK_APP_ID">2635310856541389</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">885642d56cb05ac796869652b224f780</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booking">Booking</string>

    <string name="address_bullet">\u2022 Address:</string>
    <string name="time_bullet">\u2022 Time:</string>
    <string name="stylelist_bullet">\u2022 Doctor:</string>
    <string name="confirm_bullet">\u2022 Booking Status:</string>
    <string name="bullet">\u2022</string>
    <string name="thank_you_for_booking_our_services">Confirmation!</string>
    <string name="booking_information">Bus Information</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <!--    <string name="default_web_client_id" translatable="false">270107642124-jbc48tnt323pb9cfnmbpd48okptd65gn.apps.googleusercontent.com</string>-->
</resources>