<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <!--    // User  image view-->
    <LinearLayout
        android:id="@+id/layout_user_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="4">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/colorButton"
            android:src="@drawable/ic_user_24" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="username"
                android:textColor="@android:color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_membership_id_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_emergency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>


    <!--    Banneer and look book view-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_book_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="@color/colorButton"
                    android:textSize="16sp" />


                <ImageView
                    android:id="@+id/lotiie_animation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center_horizontal"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bus" />
            </LinearLayout>


        </RelativeLayout>


        <!--        //Disable rec view-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_look_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

        </androidx.recyclerview.widget.RecyclerView>

        <!--        Booking information -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_booking_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:visibility="gone"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"

                        android:text="Your booking information"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"

                        android:text="@string/address_bullet"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_salon_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Address"

                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"

                        android:text="@string/time_bullet"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Time"
                        android:textSize="16sp"

                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"

                        android:text="@string/stylelist_bullet"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_salon_barber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="David"
                        android:textSize="16sp"

                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"

                        android:text="@string/bullet"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_time_remain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Time"

                        android:textSize="16sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/confirm_bullet"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="Status"

                        android:textSize="16sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btn_change_booking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_border_bg"
                        android:text="Change"
                        android:textAllCaps="true" />

                    <Button
                        android:id="@+id/btn_delete_booking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_border_bg"
                        android:text="Delete"
                        android:textAllCaps="true" />


                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <!--    booking Icons-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/googlesigninbtn"
            android:text="Buy Ticket"
            android:layout_marginBottom="15dp"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_buy"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_update"
            android:text="update info"
            android:textColor="#fff" />

    </RelativeLayout>

</LinearLayout>